add_library(avh_olo      avh_olo_3div.f
                         avh_olo_3fin.f
                         avh_olo_4div.f
                         avh_olo_4fin.f
                         avh_olo_b11.f
                         avh_olo_cd0.f
                         avh_olo_cmplx.f
                         avh_olo_func.f
                         avh_olo_hello.f
                         avh_olo_real.f
          )