

add_library(fortran_bbh 
                 #   nnlo_double_real/kappa.f 
                nnlo_double_real/bbggH/bbggh1n.f 
				nnlo_double_real/bbggH/bbggh2n.f 
				nnlo_double_real/bbggH/bbggh3n.f 
				nnlo_double_real/bbggH/bbggh4n.f 
				nnlo_double_real/bbggH/bbggh5n.f 
				nnlo_double_real/bbggH/bbggh6n.f 
				nnlo_double_real/bbggH/bbggh7n.f 
				nnlo_double_real/bbggH/bbggh8n.f 
				nnlo_double_real/bbggH/bbggh9n.f 
				nnlo_double_real/bbarbbarH/bbarbbarH1n.f
				nnlo_double_real/bbarbbarH/bbarbbarH2n.f
				nnlo_double_real/bbarbbarH/bbarbbarH3n.f
				nnlo_double_real/bbarbbarH/bbarbbarH4n.f
				nnlo_double_real/bbarbbarH/bbarbbarH5n.f
				nnlo_double_real/bbarbbarH/bbarbbarH6n.f
				nnlo_double_real/bbarbbarH/bbarbbarH7n.f
				nnlo_double_real/bbarbbarH/bbarbbarH8n.f
				nnlo_double_real/bbarbbarH/bbarbbarH9n.f
				nnlo_double_real/bbarqqbarH/bbarqqbarH1n.f
				nnlo_double_real/bbarqqbarH/bbarqqbarH2n.f
				nnlo_double_real/bbarqqbarH/bbarqqbarH3n.f
				nnlo_double_real/bbbbH/bbbbH1n.f
				nnlo_double_real/bbbbH/bbbbH2n.f
				nnlo_double_real/bbbbH/bbbbH3n.f
				nnlo_double_real/bbbbH/bbbbH4n.f
				nnlo_double_real/bbbbH/bbbbH5n.f
				nnlo_double_real/bbbbH/bbbbH6n.f
				nnlo_double_real/bbbbH/bbbbH7n.f
				nnlo_double_real/bbbbH/bbbbH8n.f
				nnlo_double_real/bggbH/bggbH1n.f
				nnlo_double_real/bggbH/bggbH2n.f
				nnlo_double_real/bggbH/bggbH3n.f
				nnlo_double_real/bggbH/bggbH4n.f
				nnlo_double_real/bggbH/bggbH5n.f
				nnlo_double_real/bggbH/bggbH6n.f
				nnlo_double_real/bggbH/bggbH7n.f
				nnlo_double_real/bggbH/bggbH8n.f
				nnlo_double_real/bggbH/bggbH9n.f
				nnlo_double_real/gbgbH/gbgbH1n.f
				nnlo_double_real/gbgbH/gbgbH2n.f
				nnlo_double_real/gbgbH/gbgbH3n.f
				nnlo_double_real/gbgbH/gbgbH4n.f
				nnlo_double_real/gbgbH/gbgbH5n.f
				nnlo_double_real/gbgbH/gbgbH6n.f
				nnlo_double_real/gbgbH/gbgbH7n.f
				nnlo_double_real/gbgbH/gbgbH8n.f
				nnlo_double_real/gbgbH/gbgbH9n.f
				nnlo_double_real/bqqbH/bqqbH1n.f
				nnlo_double_real/bqqbH/bqqbH2n.f
				nnlo_double_real/bqqbH/bqqbH3n.f
				nnlo_double_real/bqqbH/bqqbH4n.f
				nnlo_double_real/bqqbH/bqqbH5n.f
				nnlo_double_real/bqqbH/bqqbH6n.f
				nnlo_double_real/qbqbH/qbqbH1n.f
				nnlo_double_real/qbqbH/qbqbH2n.f
				nnlo_double_real/qbqbH/qbqbH3n.f
				nnlo_double_real/qbqbH/qbqbH4n.f
				nnlo_double_real/qbqbH/qbqbH5n.f
				nnlo_double_real/qbqbH/qbqbH6n.f
				nnlo_double_real/ggbbH/ggbbH1n.f
				nnlo_double_real/ggbbH/ggbbH2n.f
				nnlo_double_real/ggbbH/ggbbH3n.f
				nnlo_double_real/ggbbH/ggbbH4n.f
				nnlo_double_real/ggbbH/ggbbH5n.f
				nnlo_double_real/qqbarbbarH/qqbarbbarH1n.f
				nnlo_double_real/RVbbargH/RVbbargH1n.f 
				nnlo_double_real/RVbbargH/RVbbargH2n.f 
				nnlo_double_real/RVbbargH/RVbbargH3n.f 
				nnlo_double_real/RVbbargH/RVbbargH4n.f 
				nnlo_double_real/RVbbargH/polylog.f 
				nnlo_double_real/RVbbargH/functions.f 
                nnlo_double_real/gbgbH/sigma_gbbH_RV.f 
                nnlo_double_real/bggbH/RVbgbH1n.f 
                RVbbargHren0n.f )

