add_library(chaplin STATIC    HPL1.f         
                              HPL2ar1.f     
                              HPL2atm1.f     
                              HPL3ar0.f      
                              HPL3at1.f      
                              HPL4.f         
                              HPL4arm1.f     
                              HPL4else.f     
                              basisexp.f
                              HPL2.f         
                              HPL2arm1.f     
                              HPL2else.f     
                              HPL3ar1.f      
                              HPL3atm1.f     
                              HPL4ar0.f      
                              HPL4at1.f      
                              aux.f          
                              basisfct.f
                              HPL2ar0.f      
                              HPL2at1.f      
                              HPL3.f         
                              HPL3arm1.f     
                              HPL3else.f     
                              HPL4ar1.f      
                              HPL4atm1.f     
                              basis.f        
                              coefficients.f
                              )
